--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3,7 +3,7 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>github | status check</h1>
-    <img src="assets/images/bgpnd_logo.png" alt="bg-panda">
+    <img src="http://dq1o3g1glajna.cloudfront.net/website-image.png" height="150" width="150" alt="bg-panda">
   </div>
 </header>
 
